[SCB-2454] Allow test to run on jdk17